# ifrs9-ecl-demo

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  PRODUCT_SPEC.md  QA_DELIVERABLES.txt  QA_INDEX.md  QA_REPORT_SECONDARY_PAGES.md  QA_REPORT_TAB4_MODEL_EXECUTION.md  QA_TAB4_INDEX.md  QA_TESTING_COMPLETE.md  QA_TESTING_INDEX.md  QA_TESTING_SESSION_SUMMARY.txt  QA_TEST_REPORT_TABS_0_3.md  README.md  TESTING_SUMMARY.txt  deploy.sh  e2e_results.json  install.sh  pyproject.toml
app/: CLAUDE.md  admin_config.py  admin_config_defaults.py  admin_config_schema.py  admin_config_setup.py  app.py  app.yaml  backend.py  conftest.py  ecl_engine.py  install.sh  jobs.py  pyproject.toml  pytest.ini  requirements.txt
app/dashboards/: 01_user_activity.sql  02_project_analytics.sql  03_model_performance.sql  04_job_execution.sql  05_api_usage.sql  06_cost_allocation.sql  07_system_health.sql  __init__.py  provision_dashboard.py
app/db/: pool.py
app/docs-site/: docusaurus.config.ts  package-lock.json  sidebars.ts
app/docs_site/: 404.html  index.html  sitemap.xml
app/domain/: advanced.py  attribution.py  audit_trail.py  backtesting.py  backtesting_stats.py  backtesting_traffic.py  config_audit.py  data_mapper.py  hazard.py  hazard_analysis.py  hazard_cox_ph.py  hazard_estimation.py  hazard_nonparam.py  hazard_retrieval.py  hazard_tables.py  health.py  markov.py  model_registry.py  model_runs.py  period_close.py  queries.py  usage_analytics.py  validation_rules.py  workflow.py
app/ecl/: __init__.py  aggregation.py  config.py  constants.py  data_loader.py  defaults.py  helpers.py  monte_carlo.py  simulation.py
app/frontend/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
app/governance/: project_members.py  project_permissions.py  rbac.py
app/harness/: progress.md  spec.md  state.json
app/middleware/: analytics.py  auth.py  error_handler.py  perf.py  rate_limiter.py  request_id.py  security_headers.py
app/reporting/: _ifrs7_sections_a.py  (+13 more)
docs/: docusaurus.config.ts  package-lock.json  sidebars.ts
docs_old/: eval-screenshots  index.html  installation.html  overview.html  quickstart.html  style.css
harness/: FULL_HARNESS_PROMPT.md  RESUME_PROMPT.md  TESTING-COMPLETE.txt  TESTING-INDEX.txt  context-reset-1.md  context-reset-3.md  context-reset-4.md  demo-deck-spec.json  progress-run7.md.bak  progress.md  spec-run7.md.bak  spec.md  state-run7.json.bak  state.json
harness-run5-backup/: context-reset-1.md  context-reset-2.md  context-reset-3.md  context-reset-5.md  progress.md  spec.md  state.json
notebooks/: 01_data_processing.py  02_ecl_calculation.py
scripts/: 01_generate_data.py  02_run_data_processing.py  03_run_ecl_calculation.py  03a_aggregate_models.py  03a_run_single_model.py  03a_satellite_model.py  03b_run_ecl_calculation.py  03c_run_monte_carlo.py  04_sync_to_lakebase.py  e2e_customer_test.py  fix_demo_data.py
tests/: conftest.py
(+764 files in other folders)
